Fixed spacing and alignment

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 main {
     display: flex;
     flex-flow: row wrap;
-    align-content: flex-start
+    align-content: flex-start;
 }
 
 header, main section, aside, footer {
@@ -33,10 +33,10 @@ header img {
 header section {
     display: flex;
     flex-flow: column;
-    justify-content: end;
+    justify-content: center;
 }
 header h1, header p {
-    margin: 0 0 5px 0;
+    margin: 5px 0 0 15px;
 }
 
 main section {
@@ -56,9 +56,12 @@ main aside {
     background-color: #f9cf00;
 }
 main ul {
-    padding-left: 15px;
+    padding: 0 10px 0 15px;
 }
-
+main p {
+    padding: 0 10px 0 0;
+    text-align: justify;
+}
 footer {
     background-color: #d9d9d9;
 }
